# semaphore-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-test.yml
script/: build_witness_graph.sh
src/: baby_jubjub.rs  error.rs  group.rs  identity.rs  lib.rs  proof.rs  utils.rs  witness.rs
tests/: group.rs  identity.rs
