[package]
name = "semaphore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake = "2.0.2"
light-poseidon = "0.3.0"
num-bigint = "0.4.6"
thiserror = "2.0.12"
ruint = "1.14.0" 
num-traits = "0.2.19"
ethers-core = "2.0.14"
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["blocking", "json"] } 
tokio = { version = "1", features = ["full"] }

# arkworks
ark-ec = { version = "=0.5.0", default-features = false }
ark-ed-on-bn254 = { version = "=0.5.0", default-features = false }
ark-ff = { version = "=0.5.0", default-features = false }

# zk-kit
zk-kit-lean-imt = "0.1.0"

# serde
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# circom-prover
rust-witness = "0.1"
circom-prover = "=0.1.1"

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "serde_json",
    "zk-kit-lean-imt/serde"  
]

[build-dependencies]
rust-witness = "0.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] } 
