[package]
name = "semaphore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake = "2.0.2"
light-poseidon = "0.3.0"
num-bigint = "0.4.6"
thiserror = "2.0.12"
num-traits = "0.2.19"
ethers-core = "2.0.14"
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }

# arkworks
ark-ec = { version = "=0.5.0", default-features = false }
ark-ed-on-bn254 = { version = "=0.5.0", default-features = false }
ark-ff = { version = "=0.5.0", default-features = false }

# zk-kit
zk-kit-lean-imt = "0.1.0"

# serde
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"

# circom-prover
circom-prover = { git = "https://github.com/zkmopro/mopro.git", branch = "main", features = [
    "circom-witnesscalc",
] }

[features]
default = []
serde = ["dep:serde", "zk-kit-lean-imt/serde"]
